actually log out gc